Fixes for async methods, JDK 22, Gradle 8.8, more Javadocs